syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

import "genre.proto";
import "studio.proto";
import "meta.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb";

message AnimeMovieReq {
  string originalTitle = 1;
  google.protobuf.Timestamp aired = 2;
  int32 releaseYear = 3;
  int32 duration = 4;
}

message AnimeMovieRes {
  string originalTitle = 1;
  google.protobuf.Timestamp aired = 2;
  string premiered = 3;
  int32 duration = 4;
  AnimeMetaRes animeMeta = 5;
  optional AnimeGenresRes animeGenres = 6;
  optional AnimeStudiosRes animeStudios = 7;
  google.protobuf.Timestamp createdAt = 8;
}